<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.old.silence</groupId>
        <artifactId>silence-job-server</artifactId>
        <version>3.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>silence-job-server-retry-task</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!--    libs    -->
        <dependency>
            <groupId>com.github.rholder</groupId>
            <artifactId>guava-retrying</artifactId>
        </dependency>

        <!--    SilenceJob    -->
        <dependency>
            <groupId>com.old.silence</groupId>
            <artifactId>silence-job-server-task-common</artifactId>
        </dependency>
        <dependency>
            <groupId>com.old.silence</groupId>
            <artifactId>silence-job-server-common</artifactId>
        </dependency>

        <dependency>
            <groupId>com.old.silence</groupId>
            <artifactId>silence-job-common-server-api</artifactId>
        </dependency>

        <dependency>
            <groupId>com.old.silence</groupId>
            <artifactId>silence-job-common-client-api</artifactId>
        </dependency>

    </dependencies>

</project>